--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "express-debug": "^1.1.1",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.29",
