--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "betamore/fswd-winter-2016-lab-5",
   "main": "lib/server.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha",
+    "test": "mocha",
     "start": "node ./lib/server.js",
     "dev_db_create": "createdb fswd_lab_5_development",
     "postinstall": "sequelize db:migrate && webpack"
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
+    "lodash": "^4.6.1",
     "pg": "^4.4.6",
     "sequelize": "^3.19.3",
     "sequelize-cli": "^2.3.1",
@@ -30,7 +31,11 @@
     "chai": "^3.5.0",
     "express-debug": "^1.1.1",
     "gulp": "^3.9.1",
+    "gulp-exit": "0.0.2",
+    "gulp-istanbul": "^0.10.3",
     "gulp-live-server": "0.0.29",
+    "gulp-mocha": "^2.2.0",
+    "gulp-spawn-mocha": "^2.2.2",
     "gulp-util": "^3.0.7",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
