--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^2.3.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "express-debug": "^1.1.1",
     "gulp": "^3.9.1",
     "gulp-exit": "0.0.2",
