--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
     "supertest": "^1.2.0",
-    "supertest-as-promised": "^3.0.0"
+    "supertest-as-promised": "^3.0.0",
+    "webpack-stream": "^3.1.0"
   }
 }
