--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "mocha",
     "start": "node ./lib/server.js",
     "dev_db_create": "createdb fswd_lab_5_development",
+    "dev_db_drop": "dropdb fswd_lab_5_development",
     "postinstall": "sequelize db:migrate && webpack"
   },
   "keywords": [],
