--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.0",
     "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
+    "connect-roles": "^3.1.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
