--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.6",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.0.0",
     "webpack-stream": "^3.1.0"
