--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
+    "karma-source-map-support": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
