--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "express-debug": "^1.1.1",
     "jspm": "^0.16.36",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "morgan": "^1.7.0"
   },
   "jspm": {
     "directories": {
