--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "baseURL": "public"
     },
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.5.6"
+      "angular": "github:angular/bower-angular@^1.5.6",
+      "angular-route": "github:angular/bower-angular-route@^1.5.7"
     },
     "devDependencies": {}
   }
