--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./lib/server.js",
+    "dev": "NODE_ENV=development nodemon ./lib/server.js",
     "dev_db_create": "createdb fswd_lab_5_development && sequelize db:migrate",
     "dev_db_connect": "psql fswd_lab_5_development",
     "sequelize": "sequelize",
-    "postinstall": "jspm install"
+    "postinstall": "jspm install",
+    "karma": "karma start",
+    "mocha": "istanbul cover _mocha"
   },
   "keywords": [],
   "author": "",
@@ -27,10 +30,16 @@
     "sequelize-cli": "^2.3.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "express-debug": "^1.1.1",
+    "istanbul": "^0.4.4",
     "jspm": "^0.16.36",
-    "mocha": "^2.4.5",
-    "morgan": "^1.7.0"
+    "karma": "^0.13.22",
+    "mocha": "^2.5.3",
+    "morgan": "^1.7.0",
+    "sinon": "^1.17.4",
+    "supertest": "^1.2.0",
+    "supertest-as-promised": "^3.1.0"
   },
   "jspm": {
     "directories": {
