--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
+    "lodash": "^4.13.1",
     "mocha": "^2.5.3",
     "morgan": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
