--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "eslint": "^2.13.1",
+    "eslint-plugin-angular": "^1.3.0",
     "express-debug": "^1.1.1",
     "istanbul": "^0.4.4",
     "jspm": "^0.16.36",
