--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
+    "jspm": "^0.16.39",
     "nodemon": "^1.9.2",
     "pg": "^4.4.6",
     "sequelize": "^3.19.3",
